// Copyright (C) 2019 Storj Labs, Inc.
// See LICENSE for copying information.

syntax = "proto3";

option go_package = "pb";

package scope;

import "gogo.proto";

message BucketScope {
    bytes bucket = 1;

    bytes key = 2;

    bytes encrypted_path_prefix = 3;

    bytes unencrypted_path_prefix = 4;
}

message Scope {
    string satellite_url = 1;

    bytes api_key = 2;

    string project_secret = 3;

    repeated BucketScope buckets = 4;
}
